--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DRAWING-BOARD</title>
+    <title>DRAWING BOARD</title>
     <link rel="stylesheet" href="index.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
@@ -11,7 +11,7 @@
     <p>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.min.js"></script>
     <center>
-        <h1>JUST COOK</h1>
+        <h1>JUST COOK BELOW</h1>
         <div class="total">
             <div class="white" id="paper">
             </div>
